--- a/src/style/page/productdetails.css
+++ b/src/style/page/productdetails.css
@@ -3,22 +3,26 @@
   justify-content: center;
   align-items: center;
 }
+
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
   cursor: pointer;
 }
+
 .dashboard {
   height: 70vh;
   margin-bottom: 10rem;
 }
+
 .main-image img {
   padding: 10px;
   height: 80vh;
   width: 30vw;
 }
 
+/* Product images */
 .product-images li img {
   padding: 5px;
   height: 100%;
@@ -29,16 +33,18 @@ ul {
 h3 {
   text-align: start;
 }
+
 .price-container {
   display: flex;
-  /* vertical-align: middle; */
   line-height: 50px;
 }
+
 .price {
   text-align: start;
   font-size: 2rem;
   padding-left: 20px;
 }
+
 .off {
   text-align: start;
   font-size: 1.5rem;
@@ -61,6 +67,7 @@ h3 {
   border: 0.5px solid black;
   cursor: pointer;
 }
+
 .select-container label {
   font-weight: bold;
 }
@@ -71,10 +78,62 @@ h3 {
   margin-bottom: 3rem;
 }
 
-.add-to-cart-button {
+.add-to-cart-button:hover,
+.buy-now-button:hover {
+  background-color: orange;
+}
+.buy-now-button {
+  margin-top: 1rem;
+  background-color: orange;
 }
 
-.buy-now-button:hover,
-.buy-now-button {
-  background-color: orange;
+@media screen and (max-width: 480px) {
+  .dashboard .main-image img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .main-image img {
+    padding: 5px;
+    height: 50vh;
+    width: 80vw;
+  }
+
+  .price-container {
+    flex-direction: column;
+    line-height: 1.5;
+  }
+
+  .price {
+    font-size: 1.5rem;
+    padding-left: 0;
+  }
+
+  .off {
+    font-size: 1.2rem;
+  }
+
+  .price-off {
+    font-size: 1rem;
+  }
+
+  .select-container {
+    flex-direction: column;
+    margin-bottom: 2rem;
+  }
+
+  .select-container label {
+    margin-bottom: 0.5rem;
+  }
+
+  .add-to-cart-button,
+  .buy-now-button {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .buy-now-button {
+    margin-bottom: 0;
+    background-color: orange;
+  }
 }
