--- a/src/style/page/cart.css
+++ b/src/style/page/cart.css
@@ -37,6 +37,10 @@ body {
   color: black;
   font-size: 1.2rem;
 }
+.cart-item-list .delete {
+  color: red;
+  cursor: pointer;
+}
 
 /* for mobile screen */
 
