--- a/src/style/page/checkout.css
+++ b/src/style/page/checkout.css
@@ -1,6 +1,9 @@
 .navbarbrand {
   color: rgb(212, 109, 50);
 }
+h3 {
+  cursor: pointer;
+}
 .header-hr {
   margin: 0;
   padding: 0;
@@ -33,4 +36,8 @@
 
 #close-button {
   cursor: pointer;
+}
+
+.checkout-summary .summary {
+  background-color: white;
 }
