--- a/src/style/components/checkout/ordersummary.css
+++ b/src/style/components/checkout/ordersummary.css
@@ -14,7 +14,7 @@
   width: 80%;
   margin: 16px auto;
   border: none;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #120f0f;
 }
 
 .order-total {
