add a prodcuts and display on the page

--- a/src/style/components/cart/cartsummary.css
+++ b/src/style/components/cart/cartsummary.css
@@ -1,6 +1,6 @@
 /* Styles specific to CartSummary component */
 .sub-total {
-  background-color: white;
+  background-color: #ffffff;
   padding: 1rem;
 }
 
