--- a/src/style/components/home/footer.css
+++ b/src/style/components/home/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: rgb(4, 4, 74);
+  background-color: #191f4e;
   color: white;
   font-family: "Roboto", sans-serif;
   width: 100%;
