--- a/src/style/page/menproductlisting.css
+++ b/src/style/page/menproductlisting.css
@@ -1,4 +1,4 @@
-.product-list {
+.men-product-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -6,28 +6,27 @@
   padding: 0;
 }
 
-.product-list li {
+.men-product-list li {
   margin-bottom: 15px;
   display: flex;
   justify-content: center;
 }
 
-.womens-card {
+.men-product-listing-card {
   width: 12rem;
   height: 14rem;
   background-color: #fff;
-  border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
 }
 
-.womens-card:hover {
+.men-product-listing-card:hover {
   transform: scale(1.05);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.womens-product {
+.men-product-image {
   width: 100%;
   height: 100%;
   object-fit: contain;
