--- a/src/style/components/home/womensproductposter.css
+++ b/src/style/components/home/womensproductposter.css
@@ -33,13 +33,41 @@
   object-fit: contain;
   border-radius: 8px;
 }
+
+/* for mobile screen */
 @media screen and (max-width: 767px) {
   .product-list li {
     margin-bottom: 10px;
   }
 
+  .womens-card {
+    width: 30vw !important;
+    height: 18vh !important;
+  }
+
   .womens-card img {
     width: 100%;
     height: 100%;
+    object-fit: contain;
+    border-radius: 8px;
+  }
+}
+
+/* for tablet screen  */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .product-list li {
+    margin-bottom: 10px;
+  }
+
+  .womens-card {
+    width: 50vw !important;
+    height: 30vh !important;
+  }
+
+  .womens-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 8px;
   }
 }
