--- a/src/style/components/profile/profilecomponent.css
+++ b/src/style/components/profile/profilecomponent.css
@@ -1,3 +1,7 @@
+.profile-component {
+  width: 20rem;
+  font-size: 1rem;
+}
 /* for tablate screen */
 @media (min-width: 576px) and (max-width: 991.98px) {
   .profile-component {
