--- a/src/style/page/profile.css
+++ b/src/style/page/profile.css
@@ -18,7 +18,7 @@
 /* for tablate screen */
 @media (min-width: 576px) and (max-width: 991.98px) {
   .your-account {
-    background-color: red;
+    margin-left: 2%;
   }
   .profile-page-main-container {
     margin-bottom: 16rem;
