--- a/src/style/components/checkout/checkoutheader.css
+++ b/src/style/components/checkout/checkoutheader.css
@@ -6,12 +6,20 @@
 h3 {
   cursor: pointer;
 }
-
+.site-logo {
+  font-size: 1.4rem;
+}
 .header-hr {
   margin: 0;
   padding: 0;
 }
-
 .checkout-main-container {
   margin: auto;
+}
+/* For Mobile Screens */
+@media screen and (max-width: 576px) {
+  .site-logo {
+    font-size: 1.2rem;
+    margin-left: 0px !important;
+  }
 }
