--- a/src/style/components/profile/loginsecurity.css
+++ b/src/style/components/profile/loginsecurity.css
@@ -1,29 +1,15 @@
-/* For Mobile Screens */
-@media screen and (max-width: 576px) {
-  .login-logo {
-    width: 5rem;
-    height: 5rem;
+.login-security {
+  margin-bottom: 40vh;
+}
+/* for mobile screen */
+@media screen and (max-width: 570px) {
+  .login-security {
+    margin-bottom: 60vh;
   }
 }
-
 /* for tablate screen */
 @media (min-width: 576px) and (max-width: 991.98px) {
-  .login-logo {
-    width: 10rem;
-    height: 3rem;
-  }
-  .login-details {
-    width: 14rem;
-    font-size: 1rem;
-  }
-  .login-details h5 {
-    font-size: 1.1rem;
-  }
-  .login-details p {
-    font-size: 0.9rem;
-  }
-  .card-body {
-    padding: 0;
-    margin: 0;
+  .login-security {
+    margin-bottom: 50vh;
   }
 }
