add men products

--- a/src/admin-panel/style/pages/customers.css
+++ b/src/admin-panel/style/pages/customers.css
@@ -9,3 +9,8 @@ h4 {
   width: 1.4rem;
   height: 1.4rem;
 }
+.coustomer-list {
+  background-color: red;
+  height: 3.5rem;
+  vertical-align: middle;
+}
