--- a/src/style/components/home/header.css
+++ b/src/style/components/home/header.css
@@ -37,6 +37,7 @@ h4 strong {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0;
   }
   .navbar-brand h4 {
     font-size: 1.2rem;
