--- a/src/style/components/profile/profilecomponent.css
+++ b/src/style/components/profile/profilecomponent.css
@@ -2,6 +2,11 @@
   width: 20rem;
   font-size: 1rem;
 }
+@media screen and (max-width: 576px) {
+  .profile-component {
+    width: 100%;
+  }
+}
 /* for tablate screen */
 @media (min-width: 576px) and (max-width: 991.98px) {
   .profile-component {
