--- a/src/style/page/signin.css
+++ b/src/style/page/signin.css
@@ -1,3 +1,4 @@
+/* Base Styles - For Larger Screens */
 .signin-header {
   max-width: 100%;
 }
@@ -5,20 +6,147 @@
   cursor: pointer;
 }
 .fashion {
-  color: rgb(241, 240, 240);
+  color: #3e4240;
+  font-weight: 500;
 }
 .flick {
   color: rgb(212, 109, 50);
+  font-weight: 500;
+}
+.login-image-container {
+  background-color: rgb(142, 88, 198);
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-page-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  max-width: 70vw;
+  height: 90vh;
+}
+.login-image-container img {
+  height: 60vh;
+}
+.login-page-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 0;
+  margin: 0;
+}
+.login-greet h2 {
+  font-size: 1.5rem;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+.login-greet p {
+  font-size: 0.7rem;
+  padding: 0;
+  margin: 0;
+  color: #a2a2a2;
+}
+.login-form {
+  width: 70%;
+}
+.singin-form {
+  font-size: 0.7rem;
+}
+.google-or hr {
+  color: black;
+  font-size: 1rem;
+  width: 50rem;
+  margin: 1rem;
+}
+.google-or {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  font-size: 0.7rem;
 }
 
-.singin-form {
-  max-width: 30vw;
+.login-forget-password {
+  display: flex;
+  font-size: 0.7rem;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+/* For Tablets */
+@media screen and (max-width: 768px) {
+  .login-page-container {
+    max-width: 90vw;
+    flex-direction: column;
+    height: auto;
+    padding: 1rem;
+  }
+  .login-page-form-container,
+  .login-image-container {
+    width: 100%;
+    max-height: 50vh;
+  }
+  .login-image-container img {
+    width: 80%;
+    height: auto;
+  }
+  .google-or hr {
+    width: 10rem;
+  }
+  .login-image-container img {
+    display: none;
+  }
 }
 
 /* For Mobile Screens */
 @media screen and (max-width: 576px) {
+  .signin-header {
+    padding: 0.5rem;
+  }
   .singin-form {
     max-width: 100vw;
-    margin-top: 5rem !important;
+    margin-top: 2rem;
+  }
+  .login-page-container {
+    padding: 0.5rem;
+    max-width: 95vw;
+    height: 75vh;
+  }
+  .login-page-form-container {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  .login-image-container {
+    display: none;
+  }
+
+  .login-form {
+    width: 100%;
+  }
+  .google-or hr {
+    width: 5rem;
+  }
+  .login-greet h2 {
+    font-size: 1.4rem;
+    text-align: center;
+  }
+  .login-greet p {
+    font-size: 0.6rem;
+    text-align: center;
+  }
+  .google-or {
+    font-size: 0.6rem;
+  }
+  .login-forget-password {
+    font-size: 0.6rem;
+  }
+  .login-image-container img {
+    display: none;
   }
 }
