--- a/src/style/page/signup.css
+++ b/src/style/page/signup.css
@@ -1,13 +1,108 @@
-.flick {
-  color: rgb(212, 109, 50);
+/* Base Styles */
+.signup-page-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 70vw;
+  height: 90vh;
+  margin: auto;
+  margin: 0;
+  padding: 0;
 }
+
 .signup-form {
-  max-width: 30vw;
+  width: 70%;
+  max-width: 400px;
+  margin: auto;
+  font-size: 0.9rem;
 }
-/* For Mobile Screens */
-@media screen and (max-width: 576px) {
+.signup-image-container img {
+  height: 60vh;
+}
+.signup-page-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 0;
+  margin: 0;
+}
+.signup-header h3 {
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+.google-or hr {
+  color: black;
+  font-size: 1rem;
+  width: 50rem;
+  margin: 1rem;
+}
+
+.signup-image-container {
+  background-color: rgb(142, 88, 198);
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Smaller Screens - Tablets */
+@media screen and (max-width: 768px) {
+  .signup-page-container {
+    flex-direction: column;
+    max-width: 90vw;
+    height: auto;
+  }
+
+  .login-image-container {
+    width: 100%;
+    height: auto;
+  }
+
   .signup-form {
+    width: 80%;
+    margin-top: 2rem;
+  }
+  .signup-page-form-container {
+    width: 100%;
+  }
+  .signup-image-container {
+    display: none;
+  }
+}
+
+/* Mobile Screens */
+@media screen and (max-width: 576px) {
+  .signup-page-container {
     max-width: 100vw;
-    margin-top: 5rem !important;
+    height: auto;
+    padding: 0 1rem;
+  }
+
+  .signup-header h3 {
+    font-size: 1.5rem;
+  }
+
+  .signup-form {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .login-image-container img {
+    width: 100%;
+    height: auto;
+  }
+
+  .google-or hr {
+    width: 100%;
+    margin: 0.5rem 0;
+  }
+  .signup-page-form-container {
+    width: 100%;
+  }
+  .signup-image-container {
+    display: none;
   }
 }
